--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -10,6 +10,7 @@ aws-config = "1.2.0"
 aws-sdk-s3 = "1.23.0"
 aws-types = "1.2.0"
 bytes = "1.6.0"
+colored = "2.1.0"
 tokio = { version = "1.27.0", features = ["full"] }
 uuid = "1.8.0"
 
