--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -16,6 +16,7 @@ rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full", "test-util"]}
 uuid = { version = "1.8.0", features = ["v4"] }
 parquet = { version = "6.0.0", features = ["arrow"] }  # Check the version and feature compatibility.
+chrono = "0.4.38"
 
 [dev-dependencies]
 tempdir = "0.3.7"
