fix: defer! clean up process for data upload

--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.27.0", features = ["full", "test-util"]}
 uuid = { version = "1.8.0", features = ["v4"] }
 parquet = { version = "6.0.0", features = ["arrow"] }  # Check the version and feature compatibility.
 chrono = "0.4.38"
+scopeguard = "1.2.0"
 
 [dev-dependencies]
 tempdir = "0.3.7"
