feat: smart string creation based on column name

--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -18,7 +18,7 @@ uuid = { version = "1.8.0", features = ["v4"] }
 parquet = { version = "6.0.0", features = ["arrow"] }  # Check the version and feature compatibility.
 chrono = "0.4.38"
 scopeguard = "1.2.0"
-fake = "2.9.2"
+fake = { version = "2.9.2", features = ["random_color", "time"] }
 regex = "1.10.4"
 
 [dev-dependencies]
