--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -20,6 +20,7 @@ chrono = "0.4.38"
 scopeguard = "1.2.0"
 fake = { version = "2.9.2", features = ["random_color", "time"] }
 regex = "1.10.4"
+tar = "0.4.40"
 
 [dev-dependencies]
 tempdir = "0.3.7"
