--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -22,6 +22,7 @@ fake = { version = "2.9.2", features = ["random_color", "time"] }
 regex = "1.10.4"
 tar = "0.4.40"
 dirs = "5.0.1"
+flate2 = "1.0.30"
 
 [dev-dependencies]
 tempdir = "0.3.7"
